fix menu padding and flickering

--- a/_sass/_slimmenu.scss
+++ b/_sass/_slimmenu.scss
@@ -175,3 +175,14 @@ ul.slimmenu {
 .slimmenu.collapsed li ul {
   width: inherit;
 }
+
+ul.slimmenu.collapsed li a {
+    transition: none;
+    -o-transition: none;
+    -moz-transition: none;
+    -webkit-transition: none;
+}
+
+ul.slimmenu > li:first-child { padding-left: 0; }
+
+ul.slimmenu.collapsed > li:first-child { padding-left: 8px; }
